added more endpoits

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=CashCard
+# # Database connection
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
+
+# # Show SQL in logs (optional, useful for debugging)
+# spring.sql.init.mode=always
+# spring.sql.init.platform=h2
+# spring.jpa.show-sql=true
