--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.application.name=CashCard
 # spring.sql.init.mode=always
 # spring.sql.init.platform=h2
 # spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
