--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
+
+spring.jpa.show-sql=true
+logging.level.org.springframework.jdbc=DEBUG
